# auth-passwordless-kavenegar

./: LICENSE  readme.md  settings.py  setup.cfg  setup.py
auth-passless/: app.py  tests.py  urls.py
auth_passwordless_kavenegar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
utils/: drf-passless.py  sms.py
