[metadata]
name = auth-passwordless-kavenegar
version = 0.1.0
author = Mohammad Ali RAHIMI (MARKRAHIMI)
author_email = imarkrahimi@gmail.com
description = A Django app for passwordless authentication using Kavenegar SMS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/markrahimi/auth-passwordless-kavenegar
license = MIT

[options]
packages = find:
install_requires =
    Django>=3.0
    kavenegar>=1.1.2
    drfpasswordless>=1.5.9
    djangorestframework-simplejwt>=5.0.0
python_requires = >=3.6
